turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:16: error: not found: value black
quart(black)
      ^Source:17: error: not found: value red
quart(red)
      ^Source:18: error: not found: value yellow
quart(yellow)
      ^Source:19: error: not found: value magenta
quart(magenta)
      ^