turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() 
{

def quart(c:Color)=
{
	setCouleur(c)
	for (n<-1 to 90)
	{
		avance(100)
		recule(100)
		droite(1)
	}
}

quart(black)
quart(red)
quart(yellow)
quart(magenta)

}
